# chatbot-2.0

./: docker-compose.yaml
backend/: pyproject.toml
backend-chatbot/: .dockerignore
backend-chatbot/app/: .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend-chatbot/app/config/: cors.py  settings.py
backend-chatbot/app/routes/: file_route.py  openai_routes.py
backend-chatbot/app/services/: gemini_service.py
backend/app/: main.py
backend/app/config/: cors.py  settings.py
backend/app/models/: api_request.py
backend/app/routes/: gemini_routes.py
backend/app/services/: gemini_service.py  openai_service.py
frontend/: package-lock.json  package.json
frontend-chatbot/: .dockerignore  Dockerfile
frontend-chatbot/src/: App.jsx
frontend-chatbot/src/components/: ChatbotInterface.jsx  FileInput.jsx  Message.jsx
frontend-chatbot/src/styles/: ChatbotInterface.css  FileInput.css  Message.css
frontend/public/: index.html
frontend/src/: App.css
frontend/src/components/: ChatbotInterface.jsx  Message.jsx
frontend/src/styles/: ChatbotInterface.css  Message.css
