[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.8.3"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pdfquery = "^0.4.3"
pypdf2 = "^3.0.1"
pdfminer-six = "^20240706"
requests = "^2.32.3"
langchain = "^0.3.8"
langchain-openai = "^0.2.9"
openai = "^1.55.1"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
